traffic/nginx-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-sample
      version: v2
  template:
    metadata:
      labels:
        app: nginx-sample
        version: v2
    spec:
      containers:
      - name: nginx
        image: hashicorp/http-echo
        args:
        - "-text=Hello from v2"
        ports:
        - containerPort: 5678
