traffic/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-sample-svc
spec:
  selector:
    app: nginx-sample
  ports:
  - port: 80
    targetPort: 5678
  type: ClusterIP
