traffic/nginx-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-sample-vs
spec:
  hosts:
  - "*"
  gateways:
  - nginx-sample-gateway
  http:
  - route:
    - destination:
        host: nginx-sample-svc
        subset: v1
      weight: 50
    - destination:
        host: nginx-sample-svc
        subset: v2
      weight: 50
